Use concurrent GC.